tests/NormalTests/paczka1/fuzzy1/92413488.err
Error in line 5: A1B A941 2,6
Error in line 12: A1B A463 39,4
Error in line 25: zqsjazzh4s A463 33,15
Error in line 34: zqsjazzh4s A463 48,1
